# masterthesis

./: .gitignore  AE2AE.ipynb  AEclustring.ipynb  AEtrain.py  CMakeLists.txt  aetest.ipynb  dataanalysis.ipynb  datahandler.py  dataloader.py  dataprocess.ipynb  export_onnx.py  main.py  model.py  readMe.md  settings.gradle  test.ipynb  test.py  timer.py  todo.md  train.out  train.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: segmentation_model_192x192_ONNX_simpifyed-opt2.param
app/src/main/cpp/: CMakeLists.txt  converter.cpp  crackdetecion.cpp  crackdetection.h  crackfinder.cpp
app/src/main/java/com/example/crackfinder/: CrackFinder.java  MainActivity.java
app/src/main/java/com/example/syntonim/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
include/: model.h
models/: crack_models.py  resnet18_unet.py
src/: crackdetection.cpp  main.cpp
utils/: dataloader.py  helper.py
